fix setup.py build

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,13 +1,14 @@
-include MANIFEST.in *.txt
+include MANIFEST.in *.txt *.h
 recursive-include examples *.h
 recursive-include examples *.cpp
 recursive-include python *.*
-recursive-include third_party/eigen3 *.*
-recursive-include third_party/eigen3 *
-recursive-include third_party/tinyxml2 *.*
 recursive-include third_party/pybind11 *.*
-recursive-include third_party/tinyobjloader *.*
-recursive-include third_party/stb_image *.*
-recursive-include third_party/glad *.*
-recursive-include src *.*
 include .
+geometry.h
+model.h
+our_gl.h
+TinyRenderer.h
+tgaimage.h
+TinyShapeData.h
+RenderBuffers.h
+  
