update pytinyrenderer, minor polish of code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,6 @@ enable_cxx_compiler_flag_if_supported("-fopenmp")
 
 file(GLOB SOURCES *.h *.cpp)
 
-add_executable(${PROJECT_NAME} ${SOURCES})
+add_library(${PROJECT_NAME} ${SOURCES})
 
 subdirs(python)
