more examples, have cpp api render width/height in buffers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,4 +26,8 @@ file(GLOB SOURCES *.h *.cpp)
 
 add_library(${PROJECT_NAME} ${SOURCES})
 
+add_executable(hello_tinyrenderer examples/cpp/hello_tinyrenderer)
+target_link_libraries(hello_tinyrenderer PUBLIC tinyrenderer)
+target_include_directories(hello_tinyrenderer PUBLIC .)
+
 subdirs(python)
